--- a/A2_L1/app/src/main/res/values/strings.xml
+++ b/A2_L1/app/src/main/res/values/strings.xml
@@ -6,5 +6,5 @@
 
     <string name="action_delete_all">Delete all</string>
     <string name="action_add">Add</string>
-    <string name="more_actions">More actions</string>
+    <string name="do_nothing">Do nothing</string>
 </resources>
