--- a/A2_L1/app/src/main/res/values/strings.xml
+++ b/A2_L1/app/src/main/res/values/strings.xml
@@ -9,5 +9,5 @@
     <string name="do_nothing">Do nothing</string>
     <string name="title_activity_list_full_view_item">ListFullViewItemActivity</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_delete">Delete</string>
 </resources>
