--- a/A2_L1/app/src/main/res/values/strings.xml
+++ b/A2_L1/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="title_activity_list_full_view_item">ListFullViewItemActivity</string>
 
     <string name="action_delete">Delete</string>
+    <string name="edit">Edit</string>
 </resources>
