Finish first part on matherial design

--- a/A2_L1/app/src/main/res/values/strings.xml
+++ b/A2_L1/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="title">TITLE</string>
     <string name="close_note">Close Note</string>
     <string name="d">D</string>
+    <string name="note_title">Enter note title</string>
+    <string name="note_text">Enter note text</string>
 </resources>
