--- a/A2_L1/app/src/main/res/values/strings.xml
+++ b/A2_L1/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="d">D</string>
     <string name="note_title">Enter note title</string>
     <string name="note_text">Enter note text</string>
+    <string name="your_location_not_defined">Your location not defined</string>
 </resources>
