add services and factory for widget

--- a/A2_L1/app/src/main/res/values/strings.xml
+++ b/A2_L1/app/src/main/res/values/strings.xml
@@ -26,6 +26,6 @@
     <string name="note_title">Enter note title</string>
     <string name="note_text">Enter note text</string>
     <string name="your_location_not_defined">Your location not defined</string>
-    <string name="appwidget_text">EXAMPLE</string>
+    <string name="appwidget_text">EMPTY NOTEBOOK</string>
     <string name="add_widget">Add widget</string>
 </resources>
